--- a/nano/templates/helm.tmpl
+++ b/nano/templates/helm.tmpl
@@ -1,6 +1,6 @@
 
 <div style="float:left;width:50%">
-	<h3>Sector information</h3> 
+	<h3>Sector information</h3>
 	<div class='block'>
 		{{:data.sector}}
 		<br>
@@ -11,7 +11,7 @@
 </div>
 
 <div style="float:right;width:50%">
-	<h3>Flight data</h3> 
+	<h3>Flight data</h3>
 	<div class='block'>
 		<div class='item'>
 			<div class="itemLabel">
@@ -36,7 +36,7 @@
 			<div style="float:right">
 				{{:data.heading}}
 			</div>
-		</div> 
+		</div>
 	</div>
 </div>
 
@@ -65,7 +65,7 @@
 		<div class="itemContent">
 			<div class='item'>
 				<span class='white'>Direct control</span>
-				{{:helper.link(data.manual_control ? 'ERROR' : 'ERROR', 'shuffle', { 'manual' : 1 }, data.manual_control ? 'selected' : null, null)}}
+				{{:helper.link(data.manual_control ? 'Engaged' : 'Disengaged', 'shuffle', { 'manual' : 1 }, data.manual_control ? 'selected' : null, null)}}
 			</div>
 		</div>
 	</div>
@@ -78,7 +78,7 @@
 	<div class="itemContent" style="padding-top: 10px;">
 		{{:helper.link(data.autopilot ? 'Engaged' : 'Disengaged', 'gear', { 'apilot' : 1 }, data.dest ? null : 'disabled', data.autopilot ? 'selected' : null)}}
 	</div>
-</div> 
+</div>
 <div class='item'>
 	<div style="float:left;width:45%">
 		<span class='white'>Target coordinates</span>
@@ -90,7 +90,7 @@
 			{{:helper.link('None', null, { 'sety' : 1, 'setx' : 1 }, null, null)}}
 		{{/if}}
 	</div>
-</div> 
+</div>
 
 <h3>Navigation data</h3>
 <div class='item'>
@@ -111,4 +111,4 @@
 		  </div>
 		{{/for}}
 	{{/if}}
-</div>	
+</div>
